force-app/main/default/objects/Audit_Trail__c/Audit_Trail__c.object-meta.xml
<CustomObject>
    <label>Audit Trail</label>
    <nameField>
        <displayFormat>AT_{000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>