force-app/main/default/objects/Audit_Trail__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created By</label>
    <type>Email</type>
</CustomField>