force-app/main/default/objects/Audit_Trail__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Display</label>
    <type>TextArea</type>
</CustomField>