force-app/main/default/objects/Audit_Trail__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>