force-app/main/default/objects/Audit_Trail__c/fields/user_Name__c.field-meta.xml
<CustomField>
    <fullName>user_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>user Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>