force-app/main/default/objects/Audit_Trail__c/listViews/AR_UserStory_Queue_Audit_Trail.listView-meta.xml
<ListView>
    <fullName>AR_UserStory_Queue_Audit_Trail</fullName>
    <filterScope>Queue</filterScope>
    <label>AR UserStory Queue</label>
    <queue>AR_UserStory_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>